--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-.cache
+**/.cache
 .myvenv
 
 # Byte-compiled / optimized / DLL files
-linktune/api/__pycache__
-__pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 
