--- a/linktune/web/package.json
+++ b/linktune/web/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typewriter-effect": "^2.19.0"
   }
 }
